// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarkdownEditorImageContextMenu > position variants > renders with zero position 1`] = `
<markdown-editor-context-menu-stub
  data-v-4d3118c8=""
  x="0"
  y="0"
/>
`;

exports[`MarkdownEditorImageContextMenu > rendering > renders correctly with x and y position props 1`] = `
<markdown-editor-context-menu-stub
  data-v-4d3118c8=""
  x="50"
  y="120"
/>
`;
